--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=erick
 spring.security.user.password=@actual
+
+spring.main.allow-circular-references=true
+
+jwt.secret=actualtraining
